# SyriusEngine2

./: .gitmodules  ApplicationLayer.cpp  ApplicationLayer.hpp  CMakeLists.txt  main.cpp
Resources/Models/Cube/: Cube.fbx
Resources/Shaders/GLSL/: GeometryPass.frag  GeometryPass.vert  LightPass.frag  LightPass.vert  Screen.frag  Screen.vert
Resources/Shaders/HLSL/: GeometryPass.ps  GeometryPass.vs  LightPass.ps  LightPass.vs  Screen.ps  Screen.vs
include/: Debug.hpp  Include.hpp
include/SyriusEngine/: Debug.hpp  Include.hpp  Layer.hpp  PlatformDetection.hpp  SyriusEngine.hpp
include/SyriusEngine/ECS/: CameraComponent.hpp  Component.hpp  ECS.hpp  EcsDefs.hpp  LightComponent.hpp  MeshComponent.hpp  ModelComponent.hpp
include/SyriusEngine/Renderer/: Primitives.hpp  RenderContext.hpp  RenderLayer.hpp  ShaderLibrary.hpp
include/SyriusEngine/Utils/: KeyVector.hpp  Vector.hpp  Worker.hpp
src/: Debug.cpp  SyriusEngine.cpp
src/SyriusEngine/: Debug.cpp  Layer.cpp  LayerStack.cpp  LayerStack.hpp  SyriusEngine.cpp  SyriusEngineImpl.cpp  SyriusEngineImpl.hpp
src/SyriusEngine/ECS/: CameraComponent.cpp  Component.cpp  LightComponent.cpp  MeshComponent.cpp  MeshComponent.hpp  ModelComponent.cpp  ModelFromFile.cpp  ModelFromFile.hpp
src/SyriusEngine/ECS/Mesh/: Builtins.cpp  Builtins.hpp  MeshComponent.cpp  MeshComponent.hpp  ModelLoader.cpp  ModelLoader.hpp
src/SyriusEngine/Renderer/: Primitives.cpp  RenderContext.cpp  RenderData.cpp  RenderData.hpp  RenderLayer.cpp  Renderer.cpp  Renderer.hpp  ShaderLibrary.cpp
src/SyriusEngine/Renderer/PBRenderLayer/: CameraDataPass.cpp  CameraDataPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightDataPass.cpp  LightDataPass.hpp  LightPass.cpp  LightPass.hpp  MeshHandle.cpp  MeshHandle.hpp  PBRenderLayer.cpp  PBRenderLayer.hpp  Pass.cpp  Pass.hpp  ProjectionDataPass.cpp  ProjectionDataPass.hpp  ProjectionPass.cpp  ProjectionPass.hpp  RenderData.cpp  RenderData.hpp  RenderGraph.cpp  RenderGraph.hpp  RenderGraphDefs.hpp  RenderPass.cpp  RenderPass.hpp  ResourcePass.cpp  ResourcePass.hpp  SamplerPass.cpp  SamplerPass.hpp
src/SyriusEngine/Renderer/RenderGraph/: Pass.hpp
src/SyriusEngine/Utils/: Worker.cpp
